Revert "fix spacing in about page"
This reverts commit 013e0542a3aff1f71f685e65197b35fdd765b8ca.

--- a/style.css
+++ b/style.css
@@ -27,14 +27,11 @@ a {
     margin: 30px;
 }
 
-
-
 .cover-desc {
     margin-left: 8vw;
     margin-right: 8vw;
     justify-content: center;
     font-size: 1.5rem;
-    line-height: 130%;
 }
 
 /* Navbar Styles */
